VFS-5425 Fixed "jumping" version string on Firefox in login view

--- a/app/styles/onedata-gui-common/components/login-layout.scss
+++ b/app/styles/onedata-gui-common/components/login-layout.scss
@@ -44,6 +44,8 @@ $screen-fixed-service-version-height-min: 640px !default;
     }
   }
   .login-service-version-hint {
+    // without this hack, tooltip causes version string to "jump" on Firefox
+    margin-right: 1px;
     margin-left: 6px;
     .login-service-version-more-icon {
       font-size: 18px;
